# coincounter-opencv

./: CMakeLists.txt  README.md
doc/: Projet_Majeure.odt
include/: bddimage.hpp  circlesdetection.hpp  circlesdetection.hpp~  comparator.hpp  comparator_template_matching.hpp  conteneurimage.hpp
src/: .main.cpp.swp  bddimage.cpp  circlesdetection.cpp  comparator.cpp  comparator_template_matching.cpp  conteneurimage.cpp  main.cpp
